tools/bun/tests/snapshots/versions_test__bun_tool__pin_version__converts_to_list_when_not_matching.snap
---
source: tools/bun/tests/versions_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"package.json\")).unwrap()"
---
{
  "devEngines": {
    "packageManager": {
      "name": "bun",
      "version": ">=1"
    },
    "runtime": [
      {
        "name": "node",
        "version": "^20"
      },
      {
        "name": "bun",
        "version": ">=1"
      }
    ]
  }
}
