tools/bun/tests/snapshots/versions_test__bun_tool__pin_version__inserts_when_missing.snap
---
source: tools/bun/tests/versions_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"package.json\")).unwrap()"
---
{
  "devEngines": {
    "packageManager": {
      "name": "bun",
      "version": ">=1"
    },
    "runtime": {
      "name": "bun",
      "version": ">=1"
    }
  }
}
