tools/bun/tests/snapshots/versions_test__bun_tool__pin_version__updates_when_matching.snap
---
source: tools/bun/tests/versions_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"package.json\")).unwrap()"
---
{
  "devEngines": {
    "runtime": {
      "name": "bun",
      "version": ">=1"
    },
    "packageManager": {
      "name": "bun",
      "version": ">=1"
    }
  }
}
